# vectorlib

./: .gitignore  README.md  __init__.py  configs.py  datacleaner.py  datadownloader.py  dataloader.py  pyproject.toml
agents/: README.md  agent.py  api_key.py  base_tool.py  example_usage.py  test_genai.ipynb  tools_registry.py
agents/tools/: __init__.py  download_from_dict_tool.py  download_from_excel_tool.py
models/: __init__.py  gradient_boosting.py  random_forest.py  side_functions.py
tests/: test_data_cleaner.py  test_data_loader.py
tools/: __init__.py  fast_etl.py  split_series.py
vector_downloader/: config.cfg  config.cfg.example  functions.py  script.py
vectorlib/: __init__.py  data_cleaner.py  data_loader.py
vis_tools/: __init__.py  draw_axhline_with_label.py  draw_denoise_comparison.py  draw_nan_analysis.py  fast_analysis.py  fast_eda.py  flow_analysis.py  heat_water_analysis.py  power_analysis.py
