[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorlib"
version = "0.1.0"
description = "Tools for processing and analysing telemetry data from Vector / Vector-compatible sources."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["vector", "telemetry", "data", "pandas", "weather"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vectorlib*"]
